# M_O

./: .gitignore  README.md  course_template.doc  pyproject.toml  report_source.docx  report_source.extract.txt
configs/: apps.yaml  commands.yaml  default.yaml
data/: README.md  noisy_command_phrases_97.json  synthetic_command_phrases_97.json
data/dataset_curated/: README.md  dataset_manifest.csv  dataset_manifest.jsonl  duplicates_manifest.jsonl  recovery_dataset_86.jsonl  summary.json
scripts/: build_coursework_doc.py  build_large_recovery_dataset.py  build_recovery_dataset_from_commands.py  curate_dataset.ps1  generate_synthetic_audio_dataset.py  plot_command_recovery_training.py  prepare_curated_recovery_dataset.py  prepare_voice_command_dataset.py  train_audio_intent_classifier.py  train_command_recovery.py  validate_voice_command_dataset.py
src/voice_control_pc/: __init__.py  __main__.py  asr.py  audio.py  cli.py  config.py  executor.py  gui.py  logging_utils.py  models.py  nlu.py  service.py
src/voice_control_pc/ml/: __init__.py  command_recovery.py
tests/: test_command_recovery_dataset.py  test_config.py  test_nlu.py  test_service.py
