[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-control-pc"
version = "0.1.0"
description = "Local Windows voice control MVP with Faster-Whisper and rule-based NLU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "faster-whisper>=1.2.0",
  "pydantic>=2.8.0",
  "pyautogui>=0.9.54",
  "keyboard>=0.13.5",
  "pynput>=1.7.7",
  "PyAudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
ml = [
  "av>=14.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "torch>=2.3.0",
  "torchaudio>=2.3.0",
  "Pillow>=10.0.0",
]

[project.scripts]
voice-pc = "voice_control_pc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false
